Fixed label reference

--- a/c/index.html
+++ b/c/index.html
@@ -237,7 +237,7 @@ And just like any principle in chemistry, there are exceptions to the Aufbau pri
 </ul></p>
 
 <h3>Electron configuration</h3>
-<p>Taking from figure <a href="fig-c1"></a>, lithium's electron configuration has 3 electrons on two separate subshells — we write the number of electrons per subshell as a superscript after the subshell's notation. If we have $x$ as the number of electrons in a subshell, the general format for a subshell's electron configuration is:
+<p>Taking from figure <a href="#fig-c1"></a>, lithium's electron configuration has 3 electrons on two separate subshells — we write the number of electrons per subshell as a superscript after the subshell's notation. If we have $x$ as the number of electrons in a subshell, the general format for a subshell's electron configuration is:
 \begin{equation}
     n\,l\,^x
 \end{equation}
