--- a/m/index.html
+++ b/m/index.html
@@ -202,7 +202,7 @@ The difference does not have commutative property.</p>
 
 <h2>Functions and Graphing</h2>
 <h3>Functions</h3>
-<p>Functions describe the relationship between input and output — they are like factories with inputs and produce one output (<a href="fig-m19"></a>). If we define $x$ as an input and the function that will manipulate our input as $F$, then the output can be defined as:
+<p>Functions describe the relationship between input and output — they are like factories with inputs and produce one output (<a href="#fig-m19"></a>). If we define $x$ as an input and the function that will manipulate our input as $F$, then the output can be defined as:
 <figure>
     <img src="19.png" alt="Function as a black box">
     <figcaption>Function as a black box</figcaption>
@@ -268,8 +268,8 @@ A good way to think of the exponent $n$ is in terms of how you move the decimal 
 <p><h3>Introduction</h3>
 <p>The definition of a <b>complex number</b>:
 \begin{equation} i = \sqrt{-1} \end{equation}
+<span class="label" id="eq-m1"></span>
 \begin{equation}
-    \label{eq:m1}
     z = a + ib \in \mathbb{C}
     \qquad (a, b \in \mathbb{R})
 \end{equation}
@@ -283,9 +283,9 @@ Because $b=0$ for real numbers, the conjugate of a real number is itself.</p>
     <img src="9.png" alt="Complex number intuition">
     <figcaption>Complex number intuition</figcaption>
 </figure>
-As a way to draw it on a standard two-axis graph similar to <a href="fig-m9"></a>}, you can put the horizontal axis (x-axis) as $a$ and the vertical axis as $b$ to represent the imaginary part of a complex number. This works better if you also recall that we were taught real numbers on a left-right number line.</p>
+As a way to draw it on a standard two-axis graph similar to <a href="#fig-m9"></a>, you can put the horizontal axis (x-axis) as $a$ and the vertical axis as $b$ to represent the imaginary part of a complex number. This works better if you also recall that we were taught real numbers on a left-right number line.</p>
 
-<p>With this intuition, a number will have a certain "distance" away from the origin. When finding the conjugate of a complex number, you are essentially flipping the vertical axis. If you pay close attention to equation (<a href="eq-m1"></a>), you can see that it closely resembles the standard graph form $y=mx+b$.</p>
+<p>With this intuition, a number will have a certain "distance" away from the origin. When finding the conjugate of a complex number, you are essentially flipping the vertical axis. If you pay close attention to equation (<a href="#eq-m1"></a>), you can see that it closely resembles the standard graph form $y=mx+b$.</p>
 
 <h3>Identities</h3>
 <p>The <b>norm</b> of a complex number, which visually is the length of the vector from the origin to $z$ on a plane, is denoted as $\mid z \mid$:
@@ -351,8 +351,8 @@ From <b>Polar to Cartesian</b>, we can calculate the $x$ and $y$ separately usin
 
 <h3>Multiplying in Polar form</h3>
 <p>The polar form provides intuition to complex multiplication problems. When multiplying two complex numbers together, the magnitudes get multiplied and the angles get added.
+<span class="label" id="eq-m2"></span>
 \begin{equation}
-    \label{eq:m2}
     r = r_1 \times r_2
     \qquad
     \theta = \theta_1 + \theta_2
@@ -361,7 +361,7 @@ From <b>Polar to Cartesian</b>, we can calculate the $x$ and $y$ separately usin
 <p>This also explains why multiplying with $i$ with get a complex number that is perpendicular to the start vector. $i$ simply added $90^\circ$ to the angle and kept the radius the same.
 \begin{equation} 0 + 1i \Rightarrow r = 1 \qquad \theta = 90^\circ \end{equation}</p>
 
-<p>From equation (<a href="eq-m2"></a>), we can yield the general formula when raising  a complex number by an exponent, called <b>De Moivre's formula</b>:
+<p>From equation (<a href="#eq-m2"></a>), we can yield the general formula when raising  a complex number by an exponent, called <b>De Moivre's formula</b>:
 \begin{equation}
     (r(\cos\theta + i\sin\theta))^n
     = r^n(\cos{n\theta} + i\sin{n\theta})
