--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ function subjectLoad() {
     if (subjectLoaded < subjects.length) return;
 
     document.querySelectorAll('a').forEach(a => {
-        a.innerText = a.innerText || a.href.slice(1);
+        a.innerText = a.innerText || a.getAttribute('href').slice(1);
     });
     document.querySelectorAll('note').forEach((note, id) => {
         note.innerHTML = `[${id}]<span>${note.innerHTML}</span>`;
