--- a/index.html
+++ b/index.html
@@ -164,7 +164,17 @@ function subjectLoad() {
     if (subjectLoaded < subjects.length) return;
 
     document.querySelectorAll('a').forEach(a => {
-        a.innerText = a.innerText || a.getAttribute('href').slice(1);
+        // reference
+        let ref = a.getAttribute('href');
+        // assign link
+        a.innerText = a.innerText || ref.slice(1);
+        // return if not referencing local id
+        if (!ref.startsWith('#')) return;
+        // check if reference exists
+        if (!document.getElementById(ref.slice(1))) {
+            a.parentElement.style.backgroundColor = 'red';
+            console.log(a)
+        }
     });
     document.querySelectorAll('note').forEach((note, id) => {
         note.innerHTML = `[${id}]<span>${note.innerHTML}</span>`;
@@ -180,9 +190,14 @@ window.onload = () => {
     // create a time out to scroll to the hash after the page is loaded
     // cir
     setTimeout(
-        () =>
-            document.getElementById(window.location.hash.slice(1))
-            .scrollIntoView()
+        () => {
+            try {
+                document.getElementById(window.location.hash.slice(1))
+                .scrollIntoView()
+            } catch (err) {
+                console.info('No hash to scroll')
+            }
+        }
         , 1000
     );
 }
