--- a/c/index.html
+++ b/c/index.html
@@ -2,7 +2,7 @@
 <p><b>The periodic table of the elements</b> is arguably one, if not, the most important thing to have when learning chemistry. For the high school level, the most useful periodic table is the one that has ion charges of the elements.</p>
 
 <p><b>A table of common symbols used in formulas</b> can be found in table <a href="#tab-c0"></a>
-<table border="1">
+<table id="tab-c0">
     <caption>A table of common symbols used in formulas</caption>
     <tr>
         <th>Symbol</th>
