--- a/m/index.html
+++ b/m/index.html
@@ -203,7 +203,7 @@ The difference does not have commutative property.</p>
 <h2>Functions and Graphing</h2>
 <h3>Functions</h3>
 <p>Functions describe the relationship between input and output — they are like factories with inputs and produce one output (<a href="#fig-m19"></a>). If we define $x$ as an input and the function that will manipulate our input as $F$, then the output can be defined as:
-<figure id="fig-m19">
+<figure>
     <img src="19.png" alt="Function as a black box">
     <figcaption>Function as a black box</figcaption>
 </figure>
@@ -279,7 +279,7 @@ Because $b=0$ for real numbers, the conjugate of a real number is itself.</p>
 
 <h3>Visual intuition</h3>
 <p>
-<figure id="fig-m9">
+<figure>
     <img src="9.png" alt="Complex number intuition">
     <figcaption>Complex number intuition</figcaption>
 </figure>
